# DrowsinessDetector

./: Dockerfile  README.md  app.py  facemeshdetect.py  index.html  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt  script.js  style.css
server/: app.py
